Revert "fix: Prevent text in lootbox title from wrapping"
This reverts commit 7430c7aab912557329c4dcdfb01ecd8d2ca2ddd1.

--- a/app/javascript/scss/elements/_lootbox.scss
+++ b/app/javascript/scss/elements/_lootbox.scss
@@ -83,7 +83,6 @@
   font-size: 1.5rem;
   color: $white;
   font-style: normal;
-  white-space: nowrap;
 
   strong {
     color: $primary;
